attempt to fix scroll bug on ios

--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -66,7 +66,7 @@
     position: relative;
     overflow-y: auto;
     font-size: 30pt;
-    flex: 1 1 auto;
+    flex: none;
 }
 .text-holder {
     position: fixed;
